fix note text area
height is 100% with a max height to keep notes from being too long

--- a/ScribeFE/scribe-fe/src/styles/note.css
+++ b/ScribeFE/scribe-fe/src/styles/note.css
@@ -30,6 +30,7 @@ textarea {
 }
 
 .content textarea {
+	height: 100%;
 	max-height: 10rem;
 }
 
